Edited the Template pop-up item to 0 in the innerHTML

--- a/src/main/resources/cMenu.html
+++ b/src/main/resources/cMenu.html
@@ -284,17 +284,17 @@
 
 							<span class="cart-item-title">------</span>
 						</div>
-						<span class="cart-price cart-column">€ 4.00</span>
+						<span class="cart-price cart-column">€ 0.00</span>
 						<div class="cart-quantity cart-column">
 
 							<button type="button" class="btn btn-outline-danger rounded-circle plus-minus-btn dec">
 								−
 							</button>
-							<input type="number" class="form-control item_quan" value="1" min="1" max="10" name="qty" id="1">
+							<input type="number" class="form-control item_quan" value="1" min="1" max="10" name="qty" id="5">
 							<button type="button" class="btn btn-outline-success rounded-circle plus-minus-btn inc">
 								+
 							</button>
-							<button class="btn btn-outline-danger rounded-circle plus-minus-btn remove" type="button">X</button>
+							<button class="btn btn-outline-danger rounded-circle plus-minus-btn remove" id="6" type="button">X</button>
 
 
 						</div>
@@ -308,7 +308,8 @@
 					<strong class="cartel-total-price"> Total </strong>
 					<span class="cartel-total-price"></span>
 				</div>
-				<button class="btn btn-primary btn-purchase" type="button">Order</button>
+
+				<button class="btn btn-primary btn-purchase"  type="button" id="somebutn">Order</button>
 			</section>
 		</div>
 	</div>
